methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:3: error: not found: value faireV
    faireV(Color.yellow)
    ^MethodsPicture:10: error: not found: value faireV
    faireV(Color.GREEN)
    ^MethodsPicture:20: error: not found: value baisseBrosee
  baisseBrosee()
  ^MethodsPicture:42: error: not found: value faireV
faireV(c:Color) {
^MethodsPicture:42: error: not found: value c
faireV(c:Color) {
       ^MethodsPicture:44: error: not found: value c
    fairedemiV(c:Color)
               ^